:lipstick: - fix: fix various spacings to match design more closely

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -3,4 +3,8 @@
   border-radius: 12px;
   box-sizing: border-box;
   padding: var(--spacing-v-xxl) var(--spacing-h-xxl);
+
+  & + & {
+    margin-top: var(--spacing-v-m);
+  }
 }
