--- a/src/components/layout/grid/grid.scss
+++ b/src/components/layout/grid/grid.scss
@@ -3,7 +3,7 @@
 .mykn-grid {
   display: grid;
   grid-template-columns: repeat(6, auto);
-  gap: 12px;
+  gap: var(--gutter-v-mobile) var(--gutter-h-mobile);
   width: 100%;
 
   &--debug {
@@ -26,7 +26,7 @@
   @media screen and (min-width: style.$breakpoint-desktop) {
     & {
       grid-template-columns: repeat(12, auto);
-      gap: 32px;
+      gap: var(--gutter-v-desktop) var(--gutter-h-desktop);
     }
   }
 }
