--- a/src/settings/_style.scss
+++ b/src/settings/_style.scss
@@ -25,8 +25,16 @@
   --theme-shade-0: #fff;
 
   /// SPACING
+  --gutter-h-desktop: 12px;
+  --gutter-v-desktop: 24px;
+
+  --gutter-h-mobile: 12px;
+  --gutter-v-mobile: 12px;
+
   --spacing-h-s: 12px;
   --spacing-v-s: 6px;
+
+  --spacing-v-m: 8px;
 
   --spacing-h-xl: 20px;
   --spacing-v-xl: 50px;
